write the [#REF!] as defined in ODFF, tdf#86575 related

... if a part of the reference was deleted, instead of [.#REF!A1]

Actually this is a regression that already can be tracked down to
c54616f62bc70a9d39abf8837a9d7c3031c80a41 which changed things to use
ValidAddress() only.

Change-Id: I70f68722d7af02f6da3380c2dd9d54704c20b451